--- a/package.json
+++ b/package.json
@@ -1,1 +1,11 @@
-
+{
+  "name": "walvy-paste",
+  "version": "1.0.0",
+  "scripts": {
+    "dev": "vercel dev",
+    "start": "vercel dev"
+  },
+  "dependencies": {
+    "uuid": "^9.0.0"
+  }
+}
